# jina-grep-cli

./: .gitignore  AGENTS.md  README.md  pyproject.toml
jina_grep/: __init__.py  cli.py  client.py  embedder.py  server.py
