[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jina-grep"
version = "0.1.0"
description = "Semantic grep using Jina embeddings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=3.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "click>=8.1.0",
]

[project.scripts]
jina-grep = "jina_grep.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["jina_grep"]
