[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jina-grep"
version = "0.1.0"
description = "Semantic grep powered by Jina embeddings v5 - local on Apple Silicon via MLX"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["semantic-search", "grep", "embeddings", "mlx", "jina", "apple-silicon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mlx>=0.20.0",
    "tokenizers>=0.20.0",
    "huggingface-hub>=0.24.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "click>=8.1.0",
]

[project.urls]
Homepage = "https://github.com/jina-ai/jina-grep-cli"
Repository = "https://github.com/jina-ai/jina-grep-cli"
Issues = "https://github.com/jina-ai/jina-grep-cli/issues"

[project.scripts]
jina-grep = "jina_grep.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["jina_grep"]
